--- a/workspace/project/kurly.html
+++ b/workspace/project/kurly.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -53,10 +53,8 @@
                             </div>
                         </div>
                     </div>
-                    </div>
                 </div>
             </div>
-
             <div id="header">
                 <div class="header-main">
                     <div class="header-main-category">
@@ -456,6 +454,7 @@
                     </button>
                 </div>
             </div>  <!-- form 영역 끝나는 부분 -->
+        </div>  
         
         <!-- footer -->
         <div class="footer">
@@ -632,8 +631,7 @@
             </div>
         </div>
 
-<!-- 우리들의 약속 full screen -->
-        </div>
+    <!-- 우리들의 약속 full screen -->
     </div>
 </body>
 </html>
